# markdown-for-engineer

./: .gitignore  README.md  index.html  package-lock.json  package.json  supabase-schema.sql  tailwind.config.js  vite.config.ts
scripts/: generate-icon.cjs  generate-pwa-icons.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AuthScreen.tsx  CreateProjectModal.tsx  Dashboard.tsx  LogEditor.tsx  LogList.tsx  MarkdownPreview.tsx  ProjectCard.tsx  ProjectDetail.tsx  WysiwygEditor.tsx
src/hooks/: useAuth.ts  useStorage.ts
src/lib/: supabase.ts
src/types/: database.ts  index.ts
