[package]
name = "devlog-manager"
version = "0.1.0"
description = "Development Log Manager for Engineers"
authors = ["you"]
edition = "2021"

[lib]
name = "devlog_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
